k8s/radarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/component: movie-management
    app.kubernetes.io/part-of: media-stack
  annotations:
    glance/name: "Radarr"
    glance/icon: "di:radarr"
    glance/url: "https://radarr.home.coredev.uk"
    glance/description: "Movie Management"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/component: movie-management
        app.kubernetes.io/part-of: media-stack
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:version-6.0.4.10291@sha256:c8a55bd83672d3b63dc20edf325277ce7dc3b69d4400568cc5bbc9e6a227ebf4
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: data
          nfs:
            server: 192.168.20.40
            path: /var/nfs/shared/Homelab
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    tinyauth.apps.radarr.oauth.groups: media_admin
spec:
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  ports:
    - port: 7878
      targetPort: 7878
