k8s/radarr/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.home.coredev.uk`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-redirect
  namespace: radarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: radarr
          port: 7878
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: radarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
